--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,9 +19,9 @@ layout: default
 <section class="post-meta">
   <div class="post-date">{{ page.date | date: "%B %-d, %Y" }}</div>
   <div class="post-categories">
-  {% if page.categories.size > 0 %}kategorie: {% for cat in page.categories %}
+  {% if page.categories.size > 0 %}v {% for cat in page.categories %}
     {% if site.jekyll-archives %}
-    <a href="{{ site.baseurl }}/kategorie/{{ cat }}">{{ cat | capitalize }}</a>{% if forloop.last == false %}, {% endif %}
+    <a href="{{ site.baseurl }}/{{ cat }}/">{{ cat | capitalize }}</a>{% if forloop.last == false %}, {% endif %}
     {% else %}
     <span>{{ cat | capitalize }}</span>{% if forloop.last == false %}, {% endif %}
     {% endif %}
