--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper">
 
-    <h3 class="footer-heading">{{ site.title }} &ndash; <a href="https://or.justice.cz/ias/ui/rejstrik-firma.vysledky?subjektId=195525&typ=PLATNY">IČ: 29306809</a></h3>
+	  <h3 class="footer-heading">{{ site.title }} &ndash; IČ: 29306809 &ndash; <a href="https://or.justice.cz/ias/ui/rejstrik-firma.vysledky?subjektId=195525&typ=PLATNY">rejstřík</a>, <a href="https://or.justice.cz/ias/ui/vypis-sl-firma?subjektId=195525">sbírka listin</a></h3>
 
     <div class="site-navigation">
       
