--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,53 +1,9 @@
 <footer class="site-footer">
 
   <div class="wrapper">
-
-	  <h3 class="footer-heading">{{ site.title }} &ndash; IČ: 29306809 &ndash; <a href="https://or.justice.cz/ias/ui/rejstrik-firma.vysledky?subjektId=195525&typ=PLATNY">rejstřík</a>, <a href="https://or.justice.cz/ias/ui/vypis-sl-firma?subjektId=195525">sbírka listin</a></h3>
-
-    <div class="site-navigation">
-      
-      <p><strong>Mapa webu</strong></p>
-      <ul class="pages">
-        {% for page in site.pages %}
-        {% if page.title and page.main_nav != false %}
-          <li class="nav-link"><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
-        {% endif %}
-        {% endfor %}
-      </ul>
-    </div>
-
-    <div class="site-contact">
-
-      <p><strong>Kontakt</strong></p>
-      <ul class="social-media-list">
-        <li>
-          <a href="mailto:{{ site.email }}">
-            <i class="fa fa-envelope-o"></i>
-            <span class="username">{{ site.email }}</span>
-          </a>
-        </li>
-
-        {% for social in site.social %}
-          {% if social.url != null %}
-          <li>
-            <a href="{{ social.url }}" title="{{ social.desc }}">
-              <i class="fa fa-{{ social.icon }}"></i>
-              <span class="username">{% if social.username %}{{ social.username }}{% else %}{{ social.name }}{% endif %}</span>
-            </a>
-          </li>
-          {% endif %}
-        {% endfor %}
-
-      </ul>
-    </div>
-
-    <div class="site-signature">
-      <p class="rss-subscribe text"><strong>Odběr novinek <a href="{{ "/feed.xml" | prepend: site.baseurl }}">pomocí RSS</a></strong></p>
-      <p class="text">{{ site.description }}</p>
-    </div>
-
+	Copyright &copy; 2017 - 2018.
+	Všechna práva vyhrazena.
   </div>
-
 </footer>
 
 <!-- Scripts -->
