--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -348,6 +348,7 @@ pre code.hljs {
 */
 .site-footer {
 	$link-color: $white;
+	margin-top: 2em;
 	padding: 1em 1em 2em 1em;
 	background-color: $highlight-color;
 	color: $white;
