--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
 
   <!-- External libraries -->
   <link rel="stylesheet" href="{{ "/assets/font-awesome.min.css" | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ "/assets/{{ site.highlightjs_theme }}.min.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/assets/" + site.highlightjs_theme + ".min.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/assets/lightbox.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/assets/bootstrap.min.css" | prepend: site.baseurl }}" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
