--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,10 +11,10 @@
   {% endif %}
 
   <!-- External libraries -->
-  <link rel="stylesheet" href="{{ "/assets/font-awesome.min.css" | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ "/assets/" + site.highlightjs_theme + ".min.css" | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ "/assets/lightbox.css" | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ "/assets/bootstrap.min.css" | prepend: site.baseurl }}" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="{{ "/assets/css/font-awesome.min.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/assets/css/monokai_sublime.min.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/assets/css/lightbox.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/assets/css/bootstrap.min.css" | prepend: site.baseurl }}" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
   <!-- Favicon and other icons (made with http://www.favicon-generator.org/) -->
   <link rel="shortcut icon" href="{{ "/assets/icons/favicon.ico" | prepend: site.baseurl }}" type="image/x-icon">
