--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,20 +3,15 @@
   <div class="wrapper">
 	Copyright &copy; 2017 - 2018.
 	Všechna práva vyhrazena.
+	Nejsou zpracovávána žádná osobní data ani cookies.
   </div>
 </footer>
 
 <!-- Scripts -->
-<script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.5/highlight.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js"></script>
+<script src="{{ "/assets/js/jquery-3.3.1.min.js" | prepend: site.baseurl }}"></script>
 <script>
 
 $(document).ready(function() {
-
-  // Syntax highlighting
-  hljs.initHighlightingOnLoad();
-
   // Header
   var menuToggle = $('#js-mobile-menu').unbind();
   $('#js-navigation-menu').removeClass("show");
@@ -28,23 +23,7 @@ $(document).ready(function() {
       }
     });
   });
-
-
 });
 
 </script>
 
-{% if site.ga_tracking_id %}
-<!-- Google Analytics -->
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  ga('create', '{{ site.ga_tracking_id }}', 'auto');
-  ga('send', 'pageview', {
-    'page': '{{ page.url }}',
-    'title': '{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}'
-  });
-</script>
-{% endif %}
